# Android-FFmpeg-Multi-Decode

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/vonchenchen/android_video_demos/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_vonchenchen_android_video_demos_codec_CodecWrapper.cpp  decoder.cpp  decoder.h  log.h
app/src/main/java/: com_vonchenchen_android_video_demos_codec_CodecWrapper.h
app/src/main/java/com/vonchenchen/android_video_demos/: BaseActivity.java  MainActivity.java
app/src/main/java/com/vonchenchen/android_video_demos/codec/: FrameRender.java
app/src/main/jni/: Android.mk  Application.mk  log.h
app/src/main/jni/codec/: decoder.cpp  decoder.h  yuv_2_rgb.cpp  yuv_2_rgb.h
app/src/main/jni/codec/android/: android_native_window.cpp  android_native_window.h
app/src/main/jni/codec/jni/: com_vonchenchen_android_video_demos_codec_CodecWrapper.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/vonchenchen/android_video_demos/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
